--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,14 @@ before_install:
   - docker build -t sachinraut2323/docker-react -f Dockerfile.dev .
 script: 
   - docker run -e CI=true sachinraut2323/docker-react npm run test
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-south-1"
+  app: "docker-react"
+  env: "Dockerreact-env"
+  bucket_name: "elasticbeanstalk-ap-south-1-093699013878"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
